Header fixed on mobile and tablet

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,7 +79,7 @@ nav a {
 
 header .icon {
   width: 1rem;
-  padding-left: .75rem;
+  padding-left: 0.75rem;
 }
 
 header .mobile {
@@ -87,6 +87,10 @@ header .mobile {
 }
 
 @media only screen and (max-width: 760px) {
+  header {
+    height: 3rem;
+  }
+
   header .desktop {
     display: none;
   }
@@ -97,7 +101,7 @@ header .mobile {
   }
 
   header .content {
-    padding: .5rem 0;
+    padding: 0.5rem 0;
   }
 
   header .mobile ul {
@@ -112,7 +116,7 @@ header .mobile {
   }
 
   header .mobile .button {
-    padding: .1875rem .5rem;
+    padding: 0.1875rem 0.5rem;
     background-color: #9dc20b;
     line-height: 1.6;
     color: white;
@@ -129,7 +133,6 @@ header .mobile {
   background-size: cover;
   width: 100%;
 }
-
 
 #sign-up-section {
   display: flex;
@@ -177,7 +180,7 @@ header .mobile {
 
 #sign-up-cta .striking {
   font-family: "Rubik", sans-serif;
-  padding-bottom: .75rem;
+  padding-bottom: 0.75rem;
   margin: 0;
   color: white;
   font-size: 3.13rem;
@@ -190,9 +193,9 @@ header .mobile {
 }
 
 .us {
-  color :white;
+  color: white;
   font-size: 1.25rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   text-align: center;
 }
@@ -275,7 +278,7 @@ header .mobile {
 .feature h2 {
   margin-top: 2.5rem;
   margin-bottom: 0;
-  padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
   font-size: 2.25rem;
   font-weight: bold;
   color: #4a4a4a;
@@ -301,7 +304,7 @@ header .mobile {
   }
 
   .feature h3 {
-    font-size: .875rem;
+    font-size: 0.875rem;
     line-height: 1.4;
   }
 }
@@ -326,7 +329,7 @@ header .mobile {
 }
 
 #filters-section .content {
-  padding: 0 .625rem;
+  padding: 0 0.625rem;
   margin-bottom: 5rem;
 }
 
@@ -366,14 +369,14 @@ header .mobile {
   }
 
   #filters-section .content h2 {
-    padding-bottom: .625rem;
+    padding-bottom: 0.625rem;
     font-size: 1.125rem;
     line-height: 1.3;
     font-weight: normal;
   }
 
   #filters-section .content h3 {
-    font-size: .875rem;
+    font-size: 0.875rem;
     line-height: 1.4;
   }
 
@@ -411,7 +414,7 @@ header .mobile {
 
 @media only screen and (max-width: 760px) {
   #quotes-section .content {
-    padding: 1.875rem .625rem;
+    padding: 1.875rem 0.625rem;
   }
 
   #quotes-section .quote {
@@ -436,7 +439,7 @@ footer {
 footer .content {
   color: white;
   display: flex;
-  font-size: .75rem;
+  font-size: 0.75rem;
 }
 
 footer .copyright {
@@ -445,6 +448,6 @@ footer .copyright {
 
 @media only screen and (min-width: 760px) {
   footer .content {
-    font-size: .625rem;
+    font-size: 0.625rem;
   }
 }
